revised references: all subtopics under continents with contents

--- a/continents/africa/kenya-revenue-authority.html
+++ b/continents/africa/kenya-revenue-authority.html
@@ -340,22 +340,20 @@
                 <p class="text-justify">The impact of the cyberattack on KRA and its stakeholders was extensive. The organization suffered financial losses, reputational harm, and operational interruptions as a result of the breach. Businesses, taxpayers, and government revenue collection were all impacted by the brief service disruption. Public confidence in KRA's capacity to protect private data and ensure service continuity was damaged by the incident. KRA responded by strengthening its cybersecurity framework through personnel training, technology upgrades, and the adoption of stronger security measures. The intrusion served as a wake-up call for other government agencies and companies to examine and upgrade their cybersecurity postures. In order to safeguard public services and vital infrastructure, it also underlined the necessity of a coordinated national cybersecurity strategy.</p>
             </div>
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.standardmedia.co.ke/business/technology/article/2001456114/kra-hit-by-cyberattack">https://www.standardmedia.co.ke/business/technology/article/2001456114/kra-hit-by-cyberattack</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.businessdailyafrica.com/bd/economy/cyber-attack-on-kra-systems-slows-tax-services-3954102">https://www.businessdailyafrica.com/bd/economy/cyber-attack-on-kra-systems-slows-tax-services-3954102</a>
-                        </li>
-                    </ul>
-                </div>
+                <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                            <ul class="list-disc list-inside space-y-1">
+                                <li>AP News. (2022, September 20). The world is in 'great peril', UN chief warns global leaders. The Standard. https://www.standardmedia.co.ke/business/technology/article/2001456114/kra-hit-by-cyberattack</li>
+                                <li>Times, K. (2025, February 5). Costly system hack hits KRA, Kenya’s credit rating revised and BasiGo opportunities. https://www.linkedin.com/pulse/costly-system-hack-hits-kra-kenyas-credit-rating-revised-tz9tf</li>
+                            </ul>
+				        </div>
+					</details>
+        	    </div>
             </div>
-        </div>
 		
 		
 
