--- a/continents/africa/libya-telecom-technology.html
+++ b/continents/africa/libya-telecom-technology.html
@@ -340,21 +340,19 @@
                 <p class="text-justify">The cyberattacks had significant repercussions for both LTT and its customers. For the corporation, the attacks showed major gaps in its cybersecurity architecture, mandating immediate investments in system improvements and security processes. The disruptions also lead to a loss of client trust and potential financial losses owing to service outages. Conversely, customers encountered difficulties in carrying out business operations, communicating clearly, and gaining access to necessary services. A number of industries were impacted by the unreliability of internet connections, which had a wider effect on the national economy. The incidents emphasized the significance of having a comprehensive national cybersecurity plan to protect vital infrastructure. Increased international cooperation has been demanded in response in order to improve Libya's cybersecurity capabilities and resistance to potential threats.</p>
             </div>
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://libyaobserver.ly/news/libya-telecom-technology-hit-cyberattack">https://libyaobserver.ly/news/libya-telecom-technology-hit-cyberattack</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.bleepingcomputer.com/news/security/libya-telecom-technology-targeted-in-cyberattack/">https://www.bleepingcomputer.com/news/security/libya-telecom-technology-targeted-in-cyberattack/</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                            <ul class="list-disc list-inside space-y-1">
+                                <li>MohamedAhmed. (n.d.). Hackers launch fresh cyber-attack on Libya’s LTT data center | The Libya Observer. The Libya Observer. https://libyaobserver.ly/inbrief/hackers-launch-fresh-cyber-attack-libyas-ltt-data-center</li>
+                                <li>Ex_Admin. (2025, May 17). Libya telecom services resume after sabotage attack​​​​​​​​​​​​​​​​. Libyan Express. https://www.libyanexpress.com/libya-telecom-services-resume-after-sabotage-attack/</li>
+                            </ul>
+				        </div>
+					</details>
+        	</div>
         </div>
 		
 		
