--- a/continents/asia/air-india.html
+++ b/continents/asia/air-india.html
@@ -339,21 +339,18 @@
             </div>
 
             <!-- REFERENCES -->
-             <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://indianexpress.com/article/india/ai-flyers-data-leaked-after-cyberattack-7325026/lite/">https://indianexpress.com/article/india/ai-flyers-data-leaked-after-cyberattack-7325026/lite/</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.reuters.com/article/us-air-india-cybersecurity-idUSKBN2CT0FV/">https://www.reuters.com/article/us-air-india-cybersecurity-idUSKBN2CT0FV/</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						Reference
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>ENS Economic Bureau. (2021, May 22). Air India flyers’ data leaked after cyberattack, 45 lakh affected. The Indian Express. https://indianexpress.com/article/india/ai-flyers-data-leaked-after-cyberattack-7325026/lite/</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
