--- a/continents/asia/bangladesh-bank.html
+++ b/continents/asia/bangladesh-bank.html
@@ -339,24 +339,19 @@
             </div>
 
             <!-- REFERENCES -->
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.linkedin.com/pulse/billion-dollar-heist-inside-story-bangladesh-bank-cardwell-brown">https://www.linkedin.com/pulse/billion-dollar-heist-inside-story-bangladesh-bank-cardwell-brown</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://ermprotect.com/blog/malware-bangladesh-bank-heist/">https://ermprotect.com/blog/malware-bangladesh-bank-heist/</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.reuters.com/investigates/special-report/cyber-heist-federal/">https://www.reuters.com/investigates/special-report/cyber-heist-federal/</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Cardwell-Brown, A. (2023, March 16). The billion dollar heist: the inside story of the Bangladesh Bank cyberattack. https://www.linkedin.com/pulse/billion-dollar-heist-inside-story-bangladesh-bank-cardwell-brown</li>
+                            <li>Gonzalez, S. (2019, July 11). Malware: Bangladesh Bank Heist - ERMProtect Cybersecurity. ERMProtect Cybersecurity - Cybersecurity | Digital Forensics | Penetration Testing. https://ermprotect.com/blog/malware-bangladesh-bank-heist/</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
