--- a/continents/asia/shanghai-national-police.html
+++ b/continents/asia/shanghai-national-police.html
@@ -340,30 +340,19 @@
             </div>
 
             <!-- REFERENCES -->
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">References</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.asisonline.org/security-management-magazine/latest-news/today-in-security/2022/july/shanghai-breach-fallout/" target="_blank">
-                                Fallout from Shanghai National Police Data Breach Continues
-                            </a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.reuters.com/world/china/hacker-claims-have-stolen-1-bln-records-chinese-citizens-police-2022-07-04/" target="_blank"></a>
-                                Reuters: Hacker claims to have stolen 1 bln records of Chinese citizens from police
-                            </a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://cyberscoop.com/shanghai-data-breach-1-billion-dark-web/" target="_blank">
-                                Vicens, A. (2022, July 27). Fallout from massive Shanghai Police data breach reverberates on dark web
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Vicens, A. (2022, July 27). Fallout from massive Shanghai Police data breach reverberates on dark web. CyberScoop. https://cyberscoop.com/shanghai-data-breach-1-billion-dark-web/</li>
+                            <li>Ni, V. (2022, July 4). Hacker claims to have obtained data on 1 billion Chinese citizens. The Guardian. https://www.theguardian.com/technology/2022/jul/04/hacker-claims-access-data-billion-chinese-citizens</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
