--- a/continents/asia/tata-consultancy-solutions.html
+++ b/continents/asia/tata-consultancy-solutions.html
@@ -339,20 +339,20 @@
             </div>
 
             <!-- REFERENCES -->
-            <div>
-                <details class="rounded border border-indigo-900 shadow" open>
-                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
-                    References
-                    </summary>
-                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
-                    <ul class="list-disc list-inside space-y-1">
-                        <li>Banerjee, N. (2019, July 1). TCS, IBM hit by hackers: Report. LinkedIn. https://www.linkedin.com/news/story/tcs-ibm-hit-by-hackers-report-4692676/</li>
-                        <li>Tata Consultancy Services ordered to cough up $210M in code theft trial | Hacker News. (n.d.). https://news.ycombinator.com/item?id=38430974</li>
-                        <li>Truță, F. (n.d.). Careless Tata staffer accidentally leaks troves of banking data to GitHub. Hot For Security. https://www.bitdefender.com/en-us/blog/hotforsecurity/careless-tata-staffer-accidentally-leaks-troves-of-banking-data-to-github</li>
-                    </ul>
-                    </div>
-                </details>
-            </div>
+           <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							 <li>Banerjee, N. (2019, July 1). TCS, IBM hit by hackers: Report. LinkedIn. https://www.linkedin.com/news/story/tcs-ibm-hit-by-hackers-report-4692676/</li>
+                            <li>Tata Consultancy Services ordered to cough up $210M in code theft trial | Hacker News. (n.d.). https://news.ycombinator.com/item?id=38430974</li>
+                            <li>Truță, F. (n.d.). Careless Tata staffer accidentally leaks troves of banking data to GitHub. Hot For Security. https://www.bitdefender.com/en-us/blog/hotforsecurity/careless-tata-staffer-accidentally-leaks-troves-of-banking-data-to-github</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
