--- a/continents/europe/british-airway.html
+++ b/continents/europe/british-airway.html
@@ -341,20 +341,18 @@
 
     
 
-             <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.bbc.co.uk/news/technology-54568784The Guardian+2BBC+2Telegraph+2">BBC News. (2020, October 16). British Airways fined £20m over data breach.</a>
-                        </li>
-                         <li>
-                            <a class="text-blue-300 underline" href="https://www.theguardian.com/business/2020/oct/16/ba-fined-record-20m-for-customer-data-breachThe Guardian+4The Guardian+4The Guardian+4">The Guardian. (2020, October 16). BA fined record £20m for customer data breach. </a>
-                        </li>
-                    </ul>
-                </div>
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>BBC News. (2020, October 16). British Airways fined £20m over data breach. https://www.bbc.co.uk/news/technology-54568784</li>
+                            <li>Topham, G. (2020, October 16). BA fined record £20m for customer data breach. The Guardian. https://www.theguardian.com/business/2020/oct/16/ba-fined-record-20m-for-customer-data-breach</li>
+						</ul>
+						</div>
+					</details>
             </div>
         </div>
 		
