--- a/continents/europe/merck.html
+++ b/continents/europe/merck.html
@@ -338,21 +338,19 @@
                 </p>
             </div>
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.fiercepharma.com/pharma/merck-settles-insurance-companies-over-14b-coverage-2017-cyberattackCybersecurity Dive+4Fierce Pharma+4Insurance Business America+4">Dunleavy, K. (2024, January 5). Merck settles with insurance companies over $1.4B claim tied to 2017 cyberattack: Report. Fierce Pharma. </a>
-                        </li>
-                         <li>
-                            <a class="text-blue-300 underline" href="https://www.insurancebusinessmag.com/us/news/cyber/merck-settles-14-billion-cyberattack-case-against-insurers-471908.aspx">Frost, J. (2024, January 5). Merck settles $1.4 billion cyberattack case against insurers. Insurance Business Magazine. </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Souza, C. (2020, November 15). What Has Pharma Learned from the Merck Cyber Attack. PharmExec. https://www.pharmexec.com/view/what-has-pharma-learned-merck-cyber-attack</li>
+                            <li>Frost, J. (2024, January 5). Merck settles $1.4 billion cyberattack case against insurers. Insurance Business America. https://www.insurancebusinessmag.com/us/news/cyber/merck-settles-14-billion-cyberattack-case-against-insurers-471908.aspx</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
