--- a/continents/europe/vodafone.html
+++ b/continents/europe/vodafone.html
@@ -339,21 +339,19 @@
                 </p>
             </div>
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.bankinfosecurity.com/vodafone-victim-insider-breach-a-6067">BankInfoSecurity. (2013). Vodafone Victim of Insider Breach</a>
-                        </li>
-                         <li>
-                            <a class="text-blue-300 underline" href="https://www.cyberdefensemagazine.com/vodafone-australia-has-hacked-a-fairfax-journalists-phone/">Cyber Defense Magazine. (2013). Vodafone Australia has hacked a Fairfax journalist's phone. </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>What happened in the Vodafone data breach? | Twingate. (n.d.). https://www.twingate.com/blog/tips/vodafone-data-breach</li>
+                            <li>Vodafone victim of insider breach. (n.d.). DataBreachToday. https://www.bankinfosecurity.com/vodafone-victim-insider-breach-a-6067</li>
+						</ul>
+						</div>
+					</details>
+        		</div>
         </div>
 
 		
