--- a/continents/north-america/colonial-pipeline.html
+++ b/continents/north-america/colonial-pipeline.html
@@ -347,8 +347,8 @@
                     </summary>
                     <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                     <ul class="list-disc list-inside space-y-1">
-                        <li>https://en.wikipedia.org/wiki/Colonial_Pipeline_ransomware_attack</li>
-                        <li>https://www.techtarget.com/whatis/feature/Colonial-Pipeline-hack-explained-Everything-you-need-to-know</li>
+                        <li>Wikipedia contributors. (2025, May 6). Colonial Pipeline ransomware attack. Wikipedia. https://en.wikipedia.org/wiki/Colonial_Pipeline_ransomware_attack</li>
+                        <li>Kerner, S. M. (2022, April 26). Colonial Pipeline hack explained: Everything you need to know. WhatIs. https://www.techtarget.com/whatis/feature/Colonial-Pipeline-hack-explained-Everything-you-need-to-know</li>
                     </ul>
                     </div>
                 </details>
