--- a/continents/north-america/equifax.html
+++ b/continents/north-america/equifax.html
@@ -344,8 +344,8 @@
                     </summary>
                     <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                     <ul class="list-disc list-inside space-y-1">
-                        <li>https://archive.epic.org/privacy/data-breach/equifax/</li>
-                        <li>https://www.breachsense.com/blog/equifax-data-breach/</li>
+                        <li>Center, E. P. I. (n.d.). EPIC - Equifax Data breach. https://archive.epic.org/privacy/data-breach/equifax/</li>
+                        <li>Breachsense. (n.d.). Equifax Data breach case study: Causes and aftermath. https://www.breachsense.com/blog/equifax-data-breach/</li>
                        
                     </ul>
                     </div>
