--- a/continents/north-america/marriot-international.html
+++ b/continents/north-america/marriot-international.html
@@ -351,8 +351,8 @@
                     </summary>
                     <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                     <ul class="list-disc list-inside space-y-1">
-                        <li>https://coverlink.com/case-study/marriott-data-breach/</li>
-                        <li>https://www.csoonline.com/article/567795/marriott-data-breach-faq-how-did-it-happen-and-what-was-the-impact.html</li>
+                        <li>Young, K. (2021a, November 1). Cyber case study: Marriott Data Breach. CoverLink Insurance - Ohio Insurance Agency. https://coverlink.com/case-study/marriott-data-breach/</li>
+                        <li>Fruhlinger, J. (2020, February 12). Marriott data breach FAQ: How did it happen and what was the impact? CSO Online. https://www.csoonline.com/article/567795/marriott-data-breach-faq-how-did-it-happen-and-what-was-the-impact.html</li>
                        
                     </ul>
                     </div>
