--- a/continents/north-america/target-corporation.html
+++ b/continents/north-america/target-corporation.html
@@ -353,8 +353,8 @@
                     </summary>
                     <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                     <ul class="list-disc list-inside space-y-1">
-                        <li>https://redriver.com/security/target-data-breach</li>
-                        <li>https://www.frameworksec.com/post/the-target-breach-a-historic-cyberattack-with-lasting-consequences</li>
+                        <li>Jones, C. (2022, May 3). Warnings (& lessons) of the 2013 target data breach. Red River | Technology Decisions Aren’t Black and White. Think Red. https://redriver.com/security/target-data-breach</li>
+                        <li>The Target Breach: A Historic Cyberattack with Lasting Consequences - Oct 01, 2024. (n.d.). https://www.frameworksec.com/post/the-target-breach-a-historic-cyberattack-with-lasting-consequences</li>
                        
                     </ul>
                     </div>
