--- a/continents/north-america/yahoo.html
+++ b/continents/north-america/yahoo.html
@@ -346,8 +346,8 @@
                     </summary>
                     <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                     <ul class="list-disc list-inside space-y-1">
-                        <li>https://www.strongdm.com/what-is/yahoo-data-breach</li>
-                        <li>https://en.wikipedia.org/wiki/Yahoo_data_breaches</li>
+                        <li>Team, S. (2025, March 18). Yahoo data breach: What happened and how to prevent it. https://www.strongdm.com/what-is/yahoo-data-breach</li>
+                        <li>Wikipedia contributors. (2025b, May 10). Yahoo data breaches. Wikipedia. https://en.wikipedia.org/wiki/Yahoo_data_breaches</li>
                        
                     </ul>
                     </div>
