--- a/continents/south-america/ministerio-de-salud-publica.html
+++ b/continents/south-america/ministerio-de-salud-publica.html
@@ -345,21 +345,19 @@
             </div>
 
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.bitdefender.com/en-us/blog/hotforsecurity/cyberattack-targeting-brazilian-ministry-of-health-wipes-covid-19-vaccination-data">https://www.bitdefender.com/en-us/blog/hotforsecurity/cyberattack-targeting-brazilian-ministry-of-health-wipes-covid-19-vaccination-data</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.zdnet.com/article/brazilian-ministry-of-health-suffers-cyberattack-and-covid-19-vaccination-data-vanishes/">https://www.zdnet.com/article/brazilian-ministry-of-health-suffers-cyberattack-and-covid-19-vaccination-data-vanishes/</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+             <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Constantinescu, V. (n.d.). Cyberattack targeting Brazilian Ministry of Health wipes COVID-19 vaccination data. Hot For Security. https://www.bitdefender.com/en-us/blog/hotforsecurity/cyberattack-targeting-brazilian-ministry-of-health-wipes-covid-19-vaccination-data</li>
+                            <li>Mari, A. (2021, December 13). Brazilian Ministry of Health suffers cyberattack and COVID-19 vaccination data vanishes. ZDNET. https://www.zdnet.com/article/brazilian-ministry-of-health-suffers-cyberattack-and-covid-19-vaccination-data-vanishes/</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
