--- a/continents/africa/city-power.html
+++ b/continents/africa/city-power.html
@@ -340,21 +340,19 @@
                 <p class="text-justify">The impact of the ransomware attack on City Power and its clients was immediate and noticeable. Both residential and commercial regions experienced power outages as a result of operational interruptions. The inability of customers to buy electricity caused a great deal of discontent. The utility's IT infrastructure was reviewed after the event revealed its cybersecurity flaws. Due to service outages, City Power could lose money and suffer reputational harm. The incident acted as a warning to the utilities industry to give cybersecurity top priority. City Power responded by taking action to fortify its defenses against potential cyberattacks.</p>
             </div>
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.bbc.com/news/technology-49125853">https://www.bbc.com/news/technology-49125853</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.dw.com/en/johannesburg-power-company-hit-by-ransomware-attack/a-49741227">https://www.dw.com/en/johannesburg-power-company-hit-by-ransomware-attack/a-49741227</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+                <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>BBC News. (2019, July 26). Ransomware hits Johannesburg electricity supply. https://www.bbc.com/news/technology-49125853</li>
+                            <li>Janjevic, D. (2019, July 25). Johannesburg power company hit by ransomware. dw.com. https://www.dw.com/en/johannesburg-power-company-hit-by-ransomware-attack/a-49741227</li>
+						</ul>
+						</div>
+					</details>
+        		</div>
         </div>
 		
 		
