--- a/continents/africa/south-african-post-office.html
+++ b/continents/africa/south-african-post-office.html
@@ -339,21 +339,19 @@
                 <p class="text-justify">The impact of the hack on Postbank and its clients was significant. The bank lost more than R56 million as a result of fraudulent transactions. The requirement to replace 12 million bank cards presented logistical and operational difficulties. Customers lost faith in the bank as a result of the occurrence, which hurt its reputation. Consumers had to deal with the worry of possible identity theft as well as the inconvenience of having to replace their cards. The hack has led to calls for the bank to strengthen its security and regulatory inspections. Postbank responded by working to improve its internal security procedures and monitoring systems.</p>
             </div>
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.itweb.co.za/article/justice-department-suffers-another-cyber-attack/rW1xLv5nJkx7Rk6m">https://www.itweb.co.za/article/justice-department-suffers-another-cyber-attack/rW1xLv5nJkx7Rk6m</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://securityaffairs.com/176509/data-breach/south-african-telecom-provider-cell-c-disclosed-a-data-breach.html">https://securityaffairs.com/176509/data-breach/south-african-telecom-provider-cell-c-disclosed-a-data-breach.html</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                            <ul class="list-disc list-inside space-y-1">
+                                <li>Moyo, A. (2024, June 5). Justice department suffers another cyber attack. ITWeb. https://www.itweb.co.za/article/justice-department-suffers-another-cyber-attack/rW1xLv5nJkx7Rk6m</li>
+                                <li>Paganini, P. (2025, April 14). South African telecom provider Cell C disclosed a data breach. Security Affairs. https://securityaffairs.com/176509/data-breach/south-african-telecom-provider-cell-c-disclosed-a-data-breach.html</li>
+                            </ul>
+				        </div>
+					</details>
+        	</div>
         </div>
 		
 		
