--- a/continents/africa/transnet.html
+++ b/continents/africa/transnet.html
@@ -341,21 +341,18 @@
             </div>
 
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/">https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/">https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>  
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						Reference
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                            <ul class="list-disc list-inside space-y-1">
+                                <li>Timcke, S., & Rens, A. (2024, January 11). Bolstering South Africa’s Cyber Defenses: Policy Lessons from the 2021 Transnet Breach. Tech Policy Press. https://www.techpolicy.press/bolstering-south-africas-cyber-defenses-policy-lessons-from-the-2021-transnet-breach/</li>
+                            </ul>
+				        </div>
+					</details>
+        	</div> 
         </div>
 		
 		
