--- a/continents/europe/travelex.html
+++ b/continents/europe/travelex.html
@@ -339,21 +339,19 @@
                 </p>
             </div>
             
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://news.sky.com/story/travelex-ransomware-attack-what-we-know-11938524">Sky News. (2020). Travelex ransomware attack: What we know. </a>
-                        </li>
-                         <li>
-                            <a class="text-blue-300 underline" href="https://www.bbc.com/news/business-51005662">BBC News. (2020). Travelex cyber attack: The company at the center of a massive hack.</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Smith, J. (2022, August 19). Lessons from the Travelex cyber attack. Bridewell. https://www.bridewell.com/insights/blogs/detail/lessons-from-the-travelex-cyber-attack</li>
+                            <li>Tidy, B. J. (2020, January 7). Travelex being held to ransom by hackers. https://www.bbc.com/news/business-51017852</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
