--- a/continents/south-america/banco-de-chile.html
+++ b/continents/south-america/banco-de-chile.html
@@ -358,21 +358,19 @@
             </div>
 
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://threatpost.com/banco-de-chile-wiper-attack-just-a-cover-for-10m-swift-heist/132796/">https://threatpost.com/banco-de-chile-wiper-attack-just-a-cover-for-10m-swift-heist/132796/</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.bankinfosecurity.com/banco-de-chile-loses-10-million-in-swift-related-attack-a-11075">https://www.bankinfosecurity.com/banco-de-chile-loses-10-million-in-swift-related-attack-a-11075</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+             <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Seals, T. (2018, June 13). Banco de Chile Wiper Attack Just a Cover for $10M SWIFT Heist. Threatpost. https://threatpost.com/banco-de-chile-wiper-attack-just-a-cover-for-10m-swift-heist/132796/</li>
+                            <li>Banco de Chile Loses $10 Million in SWIFT-Related Attack. (n.d.). https://www.bankinfosecurity.com/banco-de-chile-loses-10-million-in-swift-related-attack-a-11075</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
