--- a/continents/south-america/consejo-nacional-electoral.html
+++ b/continents/south-america/consejo-nacional-electoral.html
@@ -354,21 +354,18 @@
             </div>
 
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.team-cymru.com/post/insights-into-a-cyber-attack-against-the-venezuelan-national-electoral-council">https://www.team-cymru.com/post/insights-into-a-cyber-attack-against-the-venezuelan-national-electoral-council</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.voanews.com/a/no-evidence-venezuela-vote-hacked-carter-center-election-monitor-says/7734334.html">https://www.voanews.com/a/no-evidence-venezuela-vote-hacked-carter-center-election-monitor-says/7734334.html</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+             <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						Reference
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+                            <li>Agence France-Presse. (2024, August 8). “No evidence” Venezuela vote hacked, Carter Center election monitor says. Voice of America. https://www.voanews.com/a/no-evidence-venezuela-vote-hacked-carter-center-election-monitor-says/7734334.html</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
