--- a/continents/south-america/embratel.html
+++ b/continents/south-america/embratel.html
@@ -350,21 +350,19 @@
             </div>
 
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.darkowl.com/blog-content/darknet-threat-actor-report-lapsus/">https://www.darkowl.com/blog-content/darknet-threat-actor-report-lapsus/</a>
-                        </li>
-                        <li>
-                            <a class="text-blue-300 underline" href="https://www.whiteblueocean.com/newsroom/new-cyber-extortionists-on-the-block-the-lapsus-gang/">https://www.whiteblueocean.com/newsroom/new-cyber-extortionists-on-the-block-the-lapsus-gang/</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+             <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						Reference
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Team, D. A., & Team, D. A. (2022, March 16). Darknet Threat actor report: LAPSUS$. DarkOwl, LLC. https://www.darkowl.com/blog-content/darknet-threat-actor-report-lapsus/</li>
+                            <li>New cyber extortionists on the block: the Lapsus$ gang | White Blue Ocean. (n.d.). WhiteBlueOcean. https://www.whiteblueocean.com/newsroom/new-cyber-extortionists-on-the-block-the-lapsus-gang/</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
