--- a/continents/south-america/telecom-argentina.html
+++ b/continents/south-america/telecom-argentina.html
@@ -350,18 +350,18 @@
             </div>
 
 
-            <div id="accordion" class="w-full bg-[#111436] border border-indigo-900 rounded-lg">
-                <div id="accordion-header" class="p-4 border-b border-indigo-900">
-                    <h5 class="text-purple-300 font-medium text-lg">Reference</h5>
-                </div>
-                <div class="p-4">
-                    <ul class="space-y-2">
-                        <li>
-                            <a class="text-blue-300 underline" href="https://redcanary.com/news/ransomware-criminals-attack-argentine-telecoms-giant-demand-payout-in-monero/">https://redcanary.com/news/ransomware-criminals-attack-argentine-telecoms-giant-demand-payout-in-monero/</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+             <div>
+					<details class="rounded border shadow border-indigo-900" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						Reference
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>Red Canary. (2020, July 21). Ransomware criminals attack Argentine telecoms giant, demand payout in Monero | Red Canary. https://redcanary.com/news/ransomware-criminals-attack-argentine-telecoms-giant-demand-payout-in-monero/</li>
+						</ul>
+						</div>
+					</details>
+        	</div>
         </div>
 		
 		
