--- a/recent-cyber-attacks/mgm-resorts.html
+++ b/recent-cyber-attacks/mgm-resorts.html
@@ -292,9 +292,14 @@
             </nav>
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
-			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">MGM Resorts Phishing Attack</h4>
-			</div>
+            <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../recent-attacks.html">Recent Cyber Attack</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">MGM Resorts Phishing Attack</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">MGM Resorts Phishing Attack</h4>
+            </div>
 		</div>
     <div class="bg-gradient-to-b from-black to-[#141528] text-justify">
       <div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
