Removed lorem ipsum subheading

--- a/famous-cyber-attacked-companies.html
+++ b/famous-cyber-attacked-companies.html
@@ -293,7 +293,7 @@
                 </div>
                 <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
                     <h3 class="text-6xl font-semibold">Famous Cyber Attacked Companies</h3>
-                    <p class="text-lg text-gray-200">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
+                    <p class="text-lg text-gray-200">Discover how leading organizations across continents have faced and responded to major cyber threats. Select a region below to learn more about the most impactful incidents and the companies involved.</p>
                 </div>
 			</div>
 		</div>
